--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "Simple voice AI assistant built with LiveKit Agents for Python"
 requires-python = ">=3.9"
 
 dependencies = [
-    "livekit-agents[silero,turn-detector]~=1.3.6",
+    "livekit-agents[anam,silero,turn-detector]~=1.3.6",
     "livekit-plugins-google>=1.3.5",
     "livekit-plugins-liveavatar>=1.3.5",
     "livekit-plugins-noise-cancellation~=0.2",
