Add HTTPX dependency and implement menu interaction features in agent.py
- Added `httpx` to `pyproject.toml` for making asynchronous HTTP requests.
- Introduced new function tools in `agent.py` for fetching menu items, showing item images, and placing orders.
- Enhanced the assistant's capabilities to handle user requests related to the restaurant menu and order placement.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "livekit-plugins-liveavatar>=1.3.5",
     "livekit-plugins-noise-cancellation~=0.2",
     "python-dotenv",
+    "httpx",
 ]
 
 [dependency-groups]
